# django-perf-rec

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .typos.toml  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  requirements.in  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
django_perf_rec/: __init__.py  api.py  cache.py  db.py  functional.py  orm.py  pytest_plugin.py  settings.py  sql.py  utils.py  yaml.py
django_performance_recorder/: __init__.py  api.py  cache.py  db.py  orm.py  sql.py  test_cache.py  test_utils.py  utils.py
requirements/: compile.sh  py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py35-django111.txt  py35-django20.txt  py35-django21.txt  py35-django22.txt  py36-django111.txt  py36-django20.txt  py36-django21.txt  py36-django22.txt  py36-django30.txt  py36-django31.txt  py36-django32.txt  py37-django111.txt  py37-django20.txt  py37-django21.txt  py37-django22.txt  py37-django30.txt  py37-django31.txt  py37-django32.txt  py38-django22.txt  py38-django30.txt  py38-django31.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django22.txt  (+7 more)
src/django_perf_rec/: __init__.py  api.py  cache.py  db.py  operation.py  orm.py  pytest_plugin.py  settings.py  sql.py  types.py  utils.py  yaml.py
tests/: cases.py  settings.py  test_api.file_name.perf.yml  test_api.perf.yml  test_api.py  test_basic.py  test_cache.py  test_db.py  test_functional.py  test_operation.py  test_orm.py  test_pytest_duplicate.perf.yml  test_pytest_duplicate.py  test_pytest_duplicate_other.perf.yml  test_pytest_duplicate_other.py  test_pytest_fixture_usage.perf.yml  test_pytest_fixture_usage.py  test_pytest_parametrize.perf.yml  test_pytest_parametrize.py  test_pytest_plugin.py  test_sql.py  test_utils.py  test_yaml.py  utils.py
tests/django18_sqlite3_backend/: __init__.py  base.py  operations.py
tests/requirements/: py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py310-django52.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py311-django52.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py312-django52.txt  py313-django51.txt  py313-django52.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt
tests/testapp/: models.py
