[metadata]
name = django-perf-rec
version = 4.20.1
description = Keep detailed records of the performance of your Django code.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/django-perf-rec
project_urls =
    Changelog = https://github.com/adamchainz/django-perf-rec/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT
keywords = Django
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    Django>=3.2
    PyYAML
    sqlparse>=0.4.0
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    django_perf_rec = django_perf_rec.pytest_plugin

[flake8]
max-line-length = 88
extend-ignore = E203
