[metadata]
name = django_perf_rec
version = 4.22.3
description = Keep detailed records of the performance of your Django code.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/django-perf-rec
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
keywords = Django
project_urls =
    Changelog = https://github.com/adamchainz/django-perf-rec/blob/main/CHANGELOG.rst
    Mastodon = https://fosstodon.org/@adamchainz
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    Django>=3.2
    PyYAML
    sqlparse>=0.4.4
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    django_perf_rec = django_perf_rec.pytest_plugin

[flake8]
max-line-length = 88
extend-ignore = E203
